--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,8 +11,8 @@
                 <li><a href="#" (click)="onSelect('recipe')">Recipes</a></li>
                 <li><a href="#" (click)="onSelect('shopping-list')">Shopping List</a></li>
             </ul>
-            <ul class="nav navbar navbar-right">
-                <li class="dropdown">
+            <ul class="nav navbar-nav navbar-right">
+                <li appDropdown class="dropdown">
                     <a href="#" class="dropdown-toggle" role="button">Manage<span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Save Data</a></li>
