--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -21,9 +21,10 @@
             </span>
         </button>
         <ul class="dropdown-menu">
-            <li><a  (click)="onAddToShoppingList()" (style)="cursor: pointer;">Add to List</a></li>
-            <li><a href="#">Edit Recipe</a></li>
-            <li><a href="#">Delete Recipe</a></li>
+            <li><a  (click)="onAddToShoppingList()" style="cursor: pointer;"
+                >Add to List</a></li>
+            <li><a style="cursor: pointer;" (click)="onEditRecipe()">Edit Recipe</a></li>
+            <li><a style="cursor: pointer;">Delete Recipe</a></li>
         </ul>
         </div>
     </div>
