--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -24,7 +24,7 @@
             <li><a  (click)="onAddToShoppingList()" style="cursor: pointer;"
                 >Add to List</a></li>
             <li><a style="cursor: pointer;" (click)="onEditRecipe()">Edit Recipe</a></li>
-            <li><a style="cursor: pointer;">Delete Recipe</a></li>
+            <li><a style="cursor: pointer;" (click)="onDeleteRecipe()">Delete Recipe</a></li>
         </ul>
         </div>
     </div>
